update search